# voiceassist

./: .gitignore  Danchenko.txt  README.md  bot.py  intelliscrape_tts_service.py  loadtest.py  piper_tts_service.py  prompt.md  pyproject.toml  qwen_tts_service.py  run.sh  silero_tts_service.py  supertonic_tts_service.py  system_prompt.py  tts_backends.py
cuda/: docker-compose.yml  run.sh
servers/: whisper_server.py
webui/: run.sh  server.py
webui/static/: capture-worklet.js  index.html
