[project]
name = "voiceassist"
version = "0.1.0"
description = "Local voice assistant: whisper-large-v3-turbo + gemma3:4b + Piper (ru_RU-irina-medium)"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pipecat-ai[silero,openai,local]>=0.0.55",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
    "sounddevice>=0.5",
    "soundfile>=0.12",
    "numpy>=1.26",
    "httpx>=0.27",
    # Explicit so it's resolved on every platform. torchaudio depends on torch
    # but uv's cross-platform locking has been flaky leaving torch out on Windows.
    "torch>=2.11.0",
    "torchaudio>=2.11.0",

    "piper-tts>=1.3.0",

    # Apple Silicon: MLX backend for the local Whisper server.
    "mlx-whisper>=0.4.1; sys_platform == 'darwin'",
    # Linux / Windows: faster-whisper (CTranslate2). On Windows + Linux, the
    # CUDA libraries (cuBLAS, cuDNN) ship as transitive deps via nvidia-* PyPI
    # wheels.
    "faster-whisper>=1.0.3; sys_platform != 'darwin'",
]

[tool.uv]
package = false
