[project]
name = "voiceassist"
version = "0.1.0"
description = "Local voice assistant: whisper-large-v3-turbo + gemma3:4b + Piper (ru_RU-irina-medium)"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pipecat-ai[silero,openai,local]>=0.0.55",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
    "sounddevice>=0.5",
    "soundfile>=0.12",
    "numpy>=1.26",
    "httpx>=0.27",
    # Explicit so it's resolved on every platform. torchaudio depends on torch
    # but uv's cross-platform locking has been flaky leaving torch out on Windows.
    "torch>=2.11.0",
    "torchaudio>=2.11.0",

    # Apple Silicon (CPU/Metal): Piper ONNX TTS, in-process.
    "piper-tts>=1.3.0; sys_platform == 'darwin'",

    # Linux / Windows (CUDA): Qwen3-TTS, in-process. Voice cloning.
    "qwen-tts>=0.1.1; sys_platform != 'darwin'",

    # Apple Silicon: MLX backend for the local Whisper server.
    "mlx-whisper>=0.4.1; sys_platform == 'darwin'",
    # Linux / Windows: faster-whisper (CTranslate2). On Windows + Linux, the
    # CUDA libraries (cuBLAS, cuDNN) ship as transitive deps via nvidia-* PyPI
    # wheels.
    "faster-whisper>=1.0.3; sys_platform != 'darwin'",
]

[tool.uv]
package = false

# PyPI's default torch wheels are CPU-only on Windows (CUDA-enabled on Linux).
# Force non-darwin hosts to pull from the official PyTorch cu128 index so
# Qwen3-TTS can actually use the GPU. Mac stays on PyPI for Metal/MPS torch.
[tool.uv.sources]
torch = [{ index = "pytorch-cu128", marker = "sys_platform != 'darwin'" }]
torchaudio = [{ index = "pytorch-cu128", marker = "sys_platform != 'darwin'" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
