[project]
name = "voiceassist"
version = "0.1.0"
description = "Local voice assistant: whisper + gemma3:4b + intelliscrape TTS"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pipecat-ai[silero,openai,local]>=0.0.55",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
    "sounddevice>=0.5",
    "soundfile>=0.12",
    "numpy>=1.26",
    "httpx>=0.27",
    "python-dotenv>=1.2.2",

    # torch is pulled in transitively by Pipecat's Silero VAD (CPU is fine).
    # Listed explicitly because uv's cross-platform locking has been flaky
    # leaving torch out on Windows otherwise.
    "torch>=2.11.0",
    "torchaudio>=2.11.0",

    # Default TTS backend: Supertonic v3 (multilingual, expressive tags).
    # Fetches ~400 MB of ONNX assets from Hugging Face on first synth.
    "supertonic>=1.2.0",

    # Offline-fallback TTS backend (TTS_BACKEND=piper). `TTS_BACKEND=intelliscrape`
    # routes through the remote HTTP API in intelliscrape_tts_service.py instead.
    "piper-tts>=1.3.0",

    # Apple Silicon: MLX backend for the local Whisper server.
    "mlx-whisper>=0.4.1; sys_platform == 'darwin'",
    # Linux / Windows: faster-whisper (CTranslate2). On Windows + Linux, the
    # CUDA libraries (cuBLAS, cuDNN) ship as transitive deps via nvidia-* PyPI
    # wheels.
    "faster-whisper>=1.0.3; sys_platform != 'darwin'",
]

[tool.uv]
package = false
